WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258882
[GStreamer] Emit one warning per missing plugin
https://bugs.webkit.org/show_bug.cgi?id=258882
Summary
[GStreamer] Emit one warning per missing plugin
Philippe Normand
Reported
2023-07-05 06:57:21 PDT
Flooding is useless.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-07-05 06:59:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15564
EWS
Comment 2
2023-07-06 08:33:59 PDT
Committed
265803@main
(69d5cb6ed69f): <
https://commits.webkit.org/265803@main
> Reviewed commits have been landed. Closing PR #15564 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-06 08:34:17 PDT
<
rdar://problem/111850805
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug